Attempt to fix images not showing in github website

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ p {
 
 .header {
     background-image: url("/images/clothingRack.jpg");
+    background-repeat: repeat;
     padding: 37rem 5rem 5rem;
     position: relative;
 }
